# esp-idf-gps

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt_failedattempt  LICENSE  README.md  component.mk  esp_gps.c  esp_gps.h  idf_component.yml  nmea_parser.c  nmea_parser.h
examples/gps_reader/: CMakeLists.txt
examples/gps_reader/main/: idf_component.yml  main.c
